fixed overflow text in video section

--- a/base/static/styles/index.css
+++ b/base/static/styles/index.css
@@ -311,8 +311,10 @@ select{
   position: relative;
 }
 
+
 .video-text {
-  
+  height: 100%;
+  width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -323,20 +325,43 @@ select{
   border-radius: 5px;
 }
 
-#video-text-title{
+#video-text-header{
   /* color: red; */
   font-size: 2.5rem;
+  top: 3rem;
+  position: absolute;
+  /* bottom: 8rem; */
+  top: 8rem;
+  width: 100%;
+  height: 20%;
+  text-align: center;
+  /* background-color: rgb(173, 173, 45); */
+  
 }
+
+
 
 #video-text-desc{
   font-size: 2rem;
+  border-bottom: 5rem;
+  right: 2rem;
+  width: 100%;
+  bottom: 9rem;
+ 
+  text-align: center;
+  position: absolute;
 }
 
 #deals-btn{
   position: absolute;
-  left: 35%;
+  /* left: 35%; */
   /* font-size: 2rem; */
   color: white;
+  bottom: 4rem;
+  left: 20%;
+  
+  width: 50%;
+  text-align: center;
   background-color: goldenrod;
 }
 
@@ -354,7 +379,6 @@ select{
   margin-top: 5rem;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
 }
-
 
 
 .client-profile{
@@ -403,11 +427,9 @@ select{
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif !important;
   padding: 3rem;
   font-size: 0.9em;
-  background-color: rgba(0, 0, 0, 0.322);
+  background-color: rgba(0, 0, 0, 0.178);
 
 }
-
-
 
 /* common elements */
 
